--- a/index.html
+++ b/index.html
@@ -1,137 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  </head>
+    <title>TecnoHogar</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f4f4f4;
+        }
+
+        header {
+            background: #1e88e5;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .card {
+            width: 250px;
+            margin: 40px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+            text-align: center;
+        }
+
+        button {
+            background: #1e88e5;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background: #1565c0;
+        }
+    </style>
+</head>
 
 <body>
-     <!--Menú-->
 
-     <nav class="navbar navbar-expand-md bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Rolando Barela</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Cursos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Tutoriales</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link ">Contacto</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    <header>
+        <h1>Bienvenido a TecnoHogar</h1>
+        <p>Tu tienda de tecnología de confianza</p>
+    </header>
 
-  <!-- Carrusel-->
-  <div id="carouselExampleIndicators" class="carousel slide">
-      <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" style="max-height: 700px;">
-      <img src="Imagenes/img.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item" style="max-height: 700px;">
-      <img src="Imagenes/TECNOLOGÍA-EN-TU-TIENDA.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item" style="max-height: 700px;">
-      <img src="Imagenes/Img3.png" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
-<!-- Tarjetas-->
-<div class="container mt-5 d-none d-md-block">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="card border-0 text-center" >
-  <img src="Imagenes/Trajeta.jpg" class="card-img-top rounded-circle" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">PRODUCTOS</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">COMPRA</a>
-  </div>
-</div>
+    <div class="card">
+        <h2>Producto destacado</h2>
+        <p>Aprovecha nuestras promociones del día.</p>
+        <button>Ver más</button>
     </div>
 
-    <div class="col-md-4">
-      <div class="card border-0 text-center" >
-  <img src="Imagenes/Computadora.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">COMPUTADORES</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">COMPRA</a>
-  </div>
-</div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="card border-0" >
-  <img src="Imagenes/images.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">PIEZAS DEL XBOX</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">COMPRA</a>
-  </div>
-</div>
-    </div>
-  </div>
-</div>
- 
-
-<!-- Tarjetas Horizontales-->
-
-<div class="container">
-  <div class="card mb-3 border-0">
-  <div class="row g-0">
-    <div class="col-md-5">
-      <img src="Imagenes/Trajeta.jpg" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-7">
-      <div class="card-body">
-        <h2 class="card-title">TECNOLOGIA</h2>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <div class="text-center"><a href="#" class="btn btn-success btn-lg">MIRA MAS</a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-
-<footer>
-  <div class="container-fluid bg-dark p-5 text-center">
-    <div class="row">
-      <div class="col"><a href="#" class="text-decoration-none text-sucess"><i class="bi bi-instagram"></i>INSTAGRAM</a></div>
-      <div class="col"><a href="#" class="text-decoration-none text-sucess">TUTORIALES</a></div>
-      <div class="col"><a href="#" class="text-decoration-none text-sucess">DESCARGAS</a></div>
-      <div class="col"><a href="#" class="text-decoration-none text-sucess">CONTACTO</a></div>
-    </div>
-  </div>
-</footer>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
