--- a/login.html
+++ b/login.html
@@ -10,16 +10,14 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet">
 
-  <!-- styles.css  -->
+  <!-- styles.css -->
   <link rel="stylesheet" href="styles.css">
 
   <!-- Iconos -->
-  <link 
-    rel="stylesheet" 
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<body class="bg-light d-flex align-items-center" style="height:100vh;">
+<body class="bg-light d-flex align-items-center full-height">
 
   <div class="container">
     <div class="row justify-content-center">
@@ -28,7 +26,7 @@
         <div class="card shadow-lg border-0 rounded-4">
           <div class="card-body p-4">
 
-            <h3 class="text-center mb-4 fw-bold" style="color:blueviolet;">
+            <h3 class="text-center mb-4 fw-bold login-title">
               <i class="bi bi-person-circle"></i> Inicia sesión en tu cuenta
             </h3>
 
@@ -53,29 +51,27 @@
                   <span class="input-group-text">
                     <i class="bi bi-lock"></i>
                   </span>
+
                   <input type="password" class="form-control" id="passwordInput" placeholder="Ingresa una contraseña">
-                  <span class="input-group-text" style="cursor:pointer;" onclick="togglePassword()">
+
+                  <span class="input-group-text toggle-password" onclick="togglePassword()">
                     <i class="bi bi-eye" id="toggleIcon"></i>
                   </span>
                 </div>
 
-                <!-- Olvidaste tu contraseña -->
-                <a href="#" class="d-block mt-2 small text-decoration-none text-purple" style="color:blueviolet;">
+                <a href="#" class="forgot-link small">
                   ¿Olvidaste tu contraseña?
                 </a>
-
               </div>
 
               <!-- Botón -->
               <div class="d-grid">
-                <button class="btn btn-login fw-semibold">
-                  Iniciar sesión
-                </button>
+                <button class="btn btn-login fw-semibold">Iniciar sesión</button>
               </div>
 
               <!-- Link -->
               <p class="text-center mt-3 mb-0">
-                <a href="registro.html" class="text-decoration-none text-purple" style="color:blueviolet;">
+                <a href="registro.html" class="register-link">
                   ¿Eres nuevo en TecnoHogar?
                 </a>
               </p>
@@ -89,7 +85,7 @@
     </div>
   </div>
 
-  <!-- Mostrar/ocultar contraseña (js) -->
+  <!-- Mostrar/ocultar contraseña (Ojito) -->
   <script>
     function togglePassword() {
       const passwordInput = document.getElementById("passwordInput");
@@ -97,19 +93,12 @@
 
       if (passwordInput.type === "password") {
         passwordInput.type = "text";
-        toggleIcon.classList.remove("bi-eye");
-        toggleIcon.classList.add("bi-eye-slash");
+        toggleIcon.classList.replace("bi-eye", "bi-eye-slash");
       } else {
         passwordInput.type = "password";
-        toggleIcon.classList.remove("bi-eye-slash");
-        toggleIcon.classList.add("bi-eye");
+        toggleIcon.classList.replace("bi-eye-slash", "bi-eye");
       }
     }
-  </script>
-
-  <!-- Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
   </script>
 
 </body>
