Carrusel por revisar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,79 @@
             </a>
         </div>
     </nav>
+
+    <!-- Carrusel -->
+     
+<div id="catalogCarousel" class="carousel slide" data-bs-ride="carousel">
+
+  <div class="carousel-inner">
+
+    <!-- ITEM 1 -->
+    <div class="carousel-item active">
+      <div class="carousel-container d-flex align-items-center justify-content-between">
+
+        <!-- Texto -->
+        <div class="carousel-text">
+          <h2>Tecnología que simplifica tu día</h2>
+          <p>Laptops modernas diseñadas para potenciar tu productividad.</p>
+          <button class="btn btn-catalog">Saber mas...</button>
+        </div>
+
+        <!-- Imagen -->
+        <div class="carousel-img">
+          <img src="Imagenes de prueba/Laptops.png" alt="Laptop">
+        </div>
+
+      </div>
+    </div>
+
+    <!-- ITEM 2 -->
+    <div class="carousel-item">
+      <div class="carousel-container d-flex align-items-center justify-content-between">
+
+        <div class="carousel-text">
+          <h2>Potencia en tus manos</h2>
+          <p>Equipos de alto rendimiento para gaming y trabajo.</p>
+          <button class="btn btn-catalog">Ver ofertas</button>
+        </div>
+
+        <div class="carousel-img">
+          <img src="Imagenes de prueba/Cpu.png" alt="PC Gamer">
+        </div>
+
+      </div>
+    </div>
+
+    <!-- ITEM 3 -->
+    <div class="carousel-item">
+      <div class="carousel-container d-flex align-items-center justify-content-between">
+
+        <div class="carousel-text">
+          <h2>Conéctate desde cualquier lugar</h2>
+          <p>Tablets ligeras y rápidas para estudiar y trabajar.</p>
+          <button class="btn btn-catalog">Saber mas...</button>
+        </div>
+
+        <div class="carousel-img">
+          <img src="Imagenes de prueba/Tablets.png" alt="Tablet">
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Controles -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#catalogCarousel" data-bs-slide="prev" style="color:black">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+
+  <button class="carousel-control-next" type="button" data-bs-target="#catalogCarousel" data-bs-slide="next" style="color:black">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+
+</div>
+
     
  <!-- JS (Boostrap) -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
