--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
   </div>
 
   <!-- Controles -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#catalogCarousel" data-bs-slide="prev" style="color:black">
+  <button class="carousel-control-prev" type="button" data-bs-target="#catalogCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </button>
 
-  <button class="carousel-control-next" type="button" data-bs-target="#catalogCarousel" data-bs-slide="next" style="color:black">
+  <button class="carousel-control-next" type="button" data-bs-target="#catalogCarousel" data-bs-slide="next">
     <span class="carousel-control-next-icon"></span>
   </button>
 
