Agregue el apartado de categorias

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <!-- Imagen -->
         <div class="carousel-img">
-          <img src="Imagenes de prueba/Laptops.png" alt="Laptop">
+          <img src="Imagenes Carrusel/Laptops.png" alt="Laptop">
         </div>
 
       </div>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="carousel-img">
-          <img src="Imagenes de prueba/Cpu.png" alt="PC Gamer">
+          <img src="Imagenes Carrusel/Cpu.png" alt="PC Gamer">
         </div>
 
       </div>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="carousel-img">
-          <img src="Imagenes de prueba/Tablets.png" alt="Tablet">
+          <img src="Imagenes Carrusel/Tablets.png" alt="Tablet">
         </div>
 
       </div>
@@ -111,7 +111,80 @@
 
 </div>
 
-    
+<!-- Categorías -->
+
+<!-- Título -->
+<div class="container mt-5">
+  <h2 class="text-center fw-bold mb-4">Categorías</h2>
+</div>
+
+<!-- Grid de categorías  -->
+<div class="container mt-5">
+  <div class="row g-4">
+
+    <!-- Laptops -->
+    <div class="col-md-6">
+      <div class="card border-0 text-center h-100">
+        <img src="Imagenes Categorias/Laptops.jpeg" class="card-img-top" alt="Laptops">
+        <div class="card-body">
+          <h5 class="card-title">Laptops</h5>
+          <p class="card-text">Potencia, portabilidad y diseño para tu día a día.</p>
+          <a href="#" class="btn btn-primary">Quiero ver más...</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Componentes -->
+    <div class="col-md-6">
+      <div class="card border-0 text-center h-100">
+        <img src="Imagenes Categorias/Componentes.jpeg" class="card-img-top" alt="Componentes">
+        <div class="card-body">
+          <h5 class="card-title">Componentes (RAM, SSD, tarjetas madre)</h5>
+          <p class="card-text">Componentes de alto rendimiento.</p>
+          <a href="#" class="btn btn-primary">Quiero ver más...</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Audífonos -->
+    <div class="col-md-6">
+      <div class="card border-0 text-center h-100">
+        <img src="Imagenes Categorias/Audifonos.jpeg" class="card-img-top" alt="Audífonos">
+        <div class="card-body">
+          <h5 class="card-title">Audífonos y periféricos</h5>
+          <p class="card-text">Rendimiento y comodidad en cada detalle.</p>
+          <a href="#" class="btn btn-primary">Quiero ver más...</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Monitores -->
+    <div class="col-md-6">
+      <div class="card border-0 text-center h-100">
+        <img src="Imagenes Categorias/Monitores, cables y accesorios.jpeg" class="card-img-top" alt="Monitores">
+        <div class="card-body">
+          <h5 class="card-title">Monitores, cables y accesorios</h5>
+          <p class="card-text">Conecta, amplía y mejora tu setup.</p>
+          <a href="#" class="btn btn-primary">Quiero ver más...</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Tablets -->
+    <div class="col-md-6 mx-auto">
+      <div class="card border-0 text-center h-100">
+        <img src="Imagenes Categorias/Tablets.jpeg" class="card-img-top" alt="Tablets">
+        <div class="card-body">
+          <h5 class="card-title">Tablets y dispositivos smart</h5>
+          <p class="card-text">Versatilidad y tecnología al alcance de tu mano.</p>
+          <a href="#" class="btn btn-primary">Quiero ver más...</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
  <!-- JS (Boostrap) -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
