--- a/index.html
+++ b/index.html
@@ -67,15 +67,30 @@
 
     <div class="principal_container">
         <aside class="categorias">
-
-            <div class="cont_img1">
-                <img src="Img/cat_1.jpeg" alt="">
+            <div class="item">
+                <img src="Img/cat_1.jpeg" alt="Tablet 1">
+                <p class="descripcion">Tablet de última generación</p>
+                <button>Ver más</button>
+                <span class="texto">Desde $499.000</span>
             </div>
-
-            
-            <img src="Img/cat_2.jpeg" alt="" class="img3">
-            <img src="Img/cat_3.jpeg" alt="" class="img3">
-            <img src="Img/cat_4.jpeg" alt="" class="img4">
+            <div class="item">
+                <img src="Img/cat_2.jpeg" alt="Laptop">
+                <p class="descripcion">Laptop para programación</p>
+                <button>Ver más</button>
+                <span class="texto">Desde $1.299.000</span>
+            </div>
+            <div class="item">
+                <img src="Img/cat_3.jpeg" alt="Audífonos">
+                <p class="descripcion">Audífonos con cancelación</p>
+                <button>Ver más</button>
+                <span class="texto">Desde $299.000</span>
+            </div>
+            <div class="item">
+                <img src="Img/cat_4.jpeg" alt="PC Gamer">
+                <p class="descripcion">PC Gamer con RGB</p>
+                <button>Ver más</button>
+                <span class="texto">Desde $2.499.000</span>
+            </div>
         </aside>
     </div>
 
